--- a/app/views/editor.html
+++ b/app/views/editor.html
@@ -5,6 +5,7 @@
 
 <div class="edit-details">
   <button class="btn" ng-click="update()" ng-disabled="!valid">Update</button>
+  <button class="btn" ng-click="clear()">Clear</button>
   <button class="btn" ng-click="skip()">Skip Tutorial</button>
   <button class="btn" ng-click="restart()">Restart</button>
   <span class="validation" ng-class="valid ? 'text-success' : 'text-failure'">{{ validationText }}</span>
