--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -42,7 +42,7 @@ textarea {
 .edit-area {
   margin: 10px 20px 20px 20px;
   width: calc(100% - 40px);
-  height: calc(100% - 240px);
+  height: calc(100% - 250px);
   background: none;
   border: none;
 }
@@ -53,7 +53,7 @@ textarea {
 
 .validation {
   display: block;
-  height: 20px;
+  height: 30px;
   width: 100%;
   padding: 5px 10px;
   text-align: right;
@@ -71,14 +71,43 @@ textarea {
 
 .footer {
   height: 200px;
+  background: #565656;
+  padding-top: 10px;
 }
 
-.edit-buttons {
-  display: block;
+.btn {
+  background: #949494;
+}
+
+.buttons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   height: 40px;
   width: 100%;
   padding: 0 10px;
   float: right;
+}
+
+.vertical-divider {
+  height: 100%;
+  margin: 0 10px;
+}
+
+.tutorial-buttons {
+  width: 40%;
+}
+
+.tutorial-buttons .btn {
+  width: 100%;
+}
+
+.edit-buttons {
+  width: 60%;
+}
+
+.edit-buttons .btn {
+  width: 31%;
 }
 
 .store {
@@ -92,7 +121,7 @@ textarea {
 
 .store input {
   width: calc(100% - 192px);
-  border: 1px solid silver;
+  border: 1px solid #444444;
   border-radius: 5px;
   background: #5f5e5e;
   color: white;
