--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -37,10 +37,11 @@ p {
   font-family: "Helvetica", "san-serif";
 }
 
-code {
+code, pre {
   color: #5dc1f1;
   background: #565656;
   border-radius: 4px;
+  border: none;
 }
 
 /* Editor */
@@ -56,7 +57,7 @@ code {
 .edit-area {
   margin: 10px 0 0 0;
   width: 100%;
-  height: calc(100% - 212px);
+  height: calc(100% - 182px);
   background: none;
   border: none;
   overflow: scroll;
@@ -67,11 +68,9 @@ code {
 }
 
 .validation {
-  display: block;
   height: 30px;
-  width: 100%;
   padding: 5px 10px;
-  text-align: right;
+  float: left;
 }
 
 .text-success {
