--- a/app/directives/ce-visualisation/ce-visualisation.less
+++ b/app/directives/ce-visualisation/ce-visualisation.less
@@ -1,8 +1,62 @@
 .ce-visualisation {
   height: 100%;
+  position: relative;
   background-image: url("../../../assets/images/stripes.png");
   svg {
     width: 100%;
     height: 100%;
+    .nodes {
+      circle,
+      rect {
+        fill: #dddddd;
+        stroke: #b5b5b5;
+      }
+      rect {
+        fill: #bcbcbc;
+      }
+      text {
+        text-anchor: middle;
+        font-size: 0.8em;
+      }
+    }
+    .links {
+      line {
+        stroke: #999;
+        stroke-width: 3;
+        stroke-opacity: 1;
+      }
+    }
+  }
+  .ce-visualisation-toggle {
+    position: absolute;
+    bottom: 32px;
+    display: flex;
+    padding: 6px;
+    left: 50%;
+    margin-left: -60px;
+    div {
+      padding: 7px 12px 4px;
+      background-color: #303030;
+      opacity: 0.5;
+      color: white;
+      cursor: pointer;
+      &:first-child {
+        padding-left: 16px;
+        border-top-left-radius: 16px;
+        border-bottom-left-radius: 16px;
+      }
+      &:last-child {
+        padding-right: 16px;
+        border-top-right-radius: 16px;
+        border-bottom-right-radius: 16px;
+      }
+      &:hover {
+        opacity: 0.8;
+      }
+      &.selected {
+        opacity: 1;
+        pointer-events: none;
+      }
+    }
   }
 }
